force-app/main/default/objects/Survey_Result__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Survey Results</relationshipLabel>
    <relationshipName>Survey_Results</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>