force-app/main/default/objects/Survey_Result__c/fields/CQ_Survey__c.field-meta.xml
<CustomField>
    <fullName>CQ_Survey__c</fullName>
    <label>CQ Survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>Survey Results</relationshipLabel>
    <relationshipName>Survey_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>